--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,23 @@
     "build:mac": "electron-vite build && electron-builder --mac",
     "build:linux": "electron-vite build && electron-builder --linux"
   },
+  "build": {
+  "appId": "com.yourcompany.appname",
+  "productName": "YourApp",
+  "files": [
+    "out/main/**/*",
+    "out/renderer/**/*",
+    "out/resources/**/*"
+  ],
+  "win": {
+    "target": "nsis",
+    "icon": "build/icon.ico"
+  },
+  "mac": {
+    "target": "dmg",
+    "icon": "build/icon.icns"
+  }
+},
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
